# billnet-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  manage.py  nginx.conf  pyproject.toml  run.py  setup_agents.py
app/: __init__.py  app.py  health.py  models.py  urls.py
app/auth/: serializers.py  service.py  views.py
app/core/: email_service.py  otp_service.py
app/invoices/: models.py  serializers.py  views.py
app/migrations/: 0001_initial.py
app/users/: models.py  serializers.py  views.py
app/workspaces/: __init__.py  models.py
app/workspaces/members/: __init__.py  models.py  serializers.py
apps/agents/: apps.py  config.py  intents.py  models.py  service.py
apps/agents/api/v1/: serializers.py  urls.py  views.py
apps/agents/migrations/: 0001_initial.py
apps/auth/: apps.py  service.py
apps/core/: __init__.py
apps/core/services/: __init__.py  email.py  otp.py
apps/core/utils/: identifier.py  json.py
apps/invoices/: apps.py  models.py
apps/invoices/migrations/: 0001_initial.py
apps/users/: apps.py  models.py
apps/users/migrations/: 0001_initial.py
apps/workspaces/: apps.py  permissions.py
apps/workspaces/migrations/: 0001_initial.py
apps/workspaces/models/: __init__.py  members.py  roles.py  workspace.py
config/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
config/middlewares/: api_middleware.py  workspace.py
core/: __init__.py  exceptions.py  permissions.py
core/middlewares/: exception_middleware.py
templates/emails/: otp_verification.html  otp_verification.txt  welcome.html  welcome.txt
(+15 files in other folders)
